--- a/src/components/LatestPostSection/index.css
+++ b/src/components/LatestPostSection/index.css
@@ -5,18 +5,14 @@
 #latest-filter {
     display: flex;
     align-items: center;
-    margin: 5px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 #latest-filter h6 {
     margin: 0px;
     font-size: smaller;
     font-weight: bold;
-}
-
-.category-list {
-    display: flex;
-    flex-wrap: wrap;
 }
 
 .category-item {
